@@ -40,7 +40,7 @@ struct _Eet_Dictionary
    unsigned char *all_allocated;
 
    Eina_Hash  *converts;
-   Eina_Lock   mutex;
+   Eina_Spinlock   mutex;
 
    int         size;
    int         offset;
